12/25 剩下toolbar按鍵圖示更換那邊要再想想，完成handle網路狀態，看要不要再處理一下跳toast之類的

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -52,7 +52,28 @@
         tools:layout="@layout/fragment_slideshow" >
         <argument
             android:name="titleCh"
-            app:argType="string"
-            />
+            app:argType="string" />
+        <argument
+            android:name="imgUrl"
+            app:argType="string" />
+        <argument
+            android:name="aNameEn"
+            app:argType="string" />
+        <argument
+            android:name="aAlsoKnown"
+            app:argType="string" />
+        <argument
+            android:name="aDistribution"
+            app:argType="string" />
+        <argument
+            android:name="aFeature"
+            app:argType="string" />
+        <argument
+            android:name="aBehavior"
+            app:argType="string" />
+        <argument
+            android:name="aUpdate"
+            app:argType="string" />
+
     </fragment>
 </navigation>
